--- a/config/version-map.yaml
+++ b/config/version-map.yaml
@@ -1,17 +1,12 @@
 applications:
   - key: bookverse-recommendations
     seeds:
-      application: 4.1.18
+      application: 1.12.4
+      build: 2.9.18
     packages:
       - type: docker
-        name: recommendations
-        seed: 2.7.14
+        name: recommendations-api
+        seed: 2.10.5
       - type: docker
         name: recommendations-worker
-        seed: 1.8.22
-      - type: generic
-        name: recommendation-config
-        seed: 1.13.43
-      - type: generic
-        name: resources
-        seed: 5.9.42
+        seed: 1.4.22
