refactor: rename workflow job for clarity
- Rename 'validate-release' to 'final-validation' for better clarity
- Improves workflow readability and understanding of job purpose

--- a/libs/bookverse-core/.github/workflows/release.yml
+++ b/libs/bookverse-core/.github/workflows/release.yml
@@ -273,8 +273,8 @@ jobs:
           asset_name: bookverse-core-packages
           asset_content_type: application/zip
 
-  validate-release:
-    name: Validate Release
+  final-validation:
+    name: Final Validation
     runs-on: ubuntu-latest
     needs: [validate-release, build-release, create-github-release]
     
