feat: Update Docker builds to ARM64 architecture for Apple Silicon compatibility
- Change platform from linux/amd64 to linux/arm64 for both API and Worker images
- Resolves ImagePullBackOff errors on ARM64 systems
- Maintains buildx multi-platform setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -310,8 +310,8 @@ jobs:
           docker buildx create --name multiarch --driver docker-container --use
           docker buildx inspect --bootstrap
 
-          # Build and push to JFrog Artifactory using correct pattern (linux/amd64 only for faster builds)
-          jf docker buildx build --platform linux/amd64 \
+          # Build and push to JFrog Artifactory using correct pattern (linux/arm64 for Apple Silicon)
+          jf docker buildx build --platform linux/arm64 \
             --tag "$IMAGE_NAME" \
             --metadata-file=build-metadata --output=type=image --push .
           
@@ -432,8 +432,8 @@ jobs:
           WORKER_IMAGE="${{ vars.DOCKER_REGISTRY }}/$REPO_KEY/$WORKER_NAME:$WORKER_TAG"
           echo "WORKER_IMAGE=$WORKER_IMAGE" >> $GITHUB_ENV
 
-          # Build and push worker image using correct pattern (linux/amd64 only for faster builds)
-          jf docker buildx build --platform linux/amd64 \
+          # Build and push worker image using correct pattern (linux/arm64 for Apple Silicon)
+          jf docker buildx build --platform linux/arm64 \
             -f Dockerfile.worker --tag "$WORKER_IMAGE" \
             --metadata-file=worker-build-metadata --output=type=image --push .
           
