fix: Update GitHub Action reference to use proper repository path
- Change from relative path ../../../bookverse-infra to yonatanp-jfrog/bookverse-infra
- Resolves 'repository not found' error in GitHub Actions
- Fixes docker-registry-auth action reference

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -289,7 +289,7 @@ jobs:
           echo "coverage_percent=$COVERAGE_PERCENT" >> $GITHUB_OUTPUT
 
       - name: "[Build] Docker Registry Authentication"
-        uses: ../../../bookverse-infra/.github/actions/docker-registry-auth@main
+        uses: yonatanp-jfrog/bookverse-infra/.github/actions/docker-registry-auth@main
         with:
           oidc-token: ${{ steps.jfrog-cli-auth.outputs.oidc-token }}
           registry-url: ${{ vars.JFROG_URL }}
