--- a/config/version-map.yaml
+++ b/config/version-map.yaml
@@ -1,12 +1,17 @@
 applications:
   - key: bookverse-recommendations
     seeds:
-      application: 1.12.4
-      build: 2.9.18
+      application: 4.1.18
     packages:
       - type: docker
-        name: recommendations-api
-        seed: 2.10.5
+        name: recommendations
+        seed: 2.7.14
       - type: docker
         name: recommendations-worker
-        seed: 1.4.22
+        seed: 1.8.22
+      - type: generic
+        name: recommendation-config
+        seed: 1.13.43
+      - type: generic
+        name: resources
+        seed: 5.9.42
