Migrate Recommendations service to optimized Docker build method
- Replace slow jf docker buildx with fast docker build + jf docker push
- Apply new method to both API and Worker Docker images
- Remove buildx setup overhead and platform-specific builds
- Leverage upgraded JPD capabilities for optimal build-info integration
- Consistent with inventory service migration

Benefits:
- Faster builds (no buildx overhead)
- Simplified commands
- Better build-info integration
- Consistent approach across services

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -306,18 +306,13 @@ jobs:
           echo "IMAGE_NAME=$IMAGE_NAME" >> $GITHUB_ENV
           echo "Using recommendations package version: $RECOMMENDATIONS_VERSION"
 
-          # Set up Docker buildx for multi-platform builds
-          docker buildx create --name multiarch --driver docker-container --use
-          docker buildx inspect --bootstrap
-
-          # Build and push to JFrog Artifactory using correct pattern (linux/arm64 for Apple Silicon)
-          jf docker buildx build --platform linux/arm64 \
-            --tag "$IMAGE_NAME" \
-            --metadata-file=build-metadata --output=type=image --push .
+          # Build Docker image using standard docker build (fast)
+          docker build --tag "$IMAGE_NAME" .
           
-          # Create build-docker association using metadata file
-          jf rt build-docker-create "$REPO_KEY" \
-            --image-file build-metadata --build-name "$BUILD_NAME" --build-number "$BUILD_NUMBER" \
+          # Push to JFrog Artifactory with build-info integration
+          jf docker push "$IMAGE_NAME" \
+            --build-name "$BUILD_NAME" \
+            --build-number "$BUILD_NUMBER" \
             --project "${{ vars.PROJECT_KEY }}"
 
           echo "DOCKER_BUILD_PUSH_STATUS=SUCCESS" >> $GITHUB_ENV
@@ -432,14 +427,13 @@ jobs:
           WORKER_IMAGE="${{ vars.DOCKER_REGISTRY }}/$REPO_KEY/$WORKER_NAME:$WORKER_TAG"
           echo "WORKER_IMAGE=$WORKER_IMAGE" >> $GITHUB_ENV
 
-          # Build and push worker image using correct pattern (linux/arm64 for Apple Silicon)
-          jf docker buildx build --platform linux/arm64 \
-            -f Dockerfile.worker --tag "$WORKER_IMAGE" \
-            --metadata-file=worker-build-metadata --output=type=image --push .
+          # Build worker Docker image using standard docker build (fast)
+          docker build -f Dockerfile.worker --tag "$WORKER_IMAGE" .
           
-          # Create build-docker association using metadata file
-          jf rt build-docker-create "$REPO_KEY" \
-            --image-file worker-build-metadata --build-name "$BUILD_NAME" --build-number "$BUILD_NUMBER" \
+          # Push to JFrog Artifactory with build-info integration
+          jf docker push "$WORKER_IMAGE" \
+            --build-name "$BUILD_NAME" \
+            --build-number "$BUILD_NUMBER" \
             --project "${{ vars.PROJECT_KEY }}"
           
           echo "✅ Built, pushed, and associated Worker Docker image with build-info"
