fix: resolve syntax error in Enhanced Build Summary step
- Fixed malformed echo statements that were causing bash syntax errors
- Replaced incomplete 'echo "' statements with proper markdown headers
- Added structured sections: Build Information, Job Status, Artifacts, Integration Status, Next Steps
- Validated YAML syntax is correct

This resolves the CI failures in the Enhanced Build Summary step.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1014,17 +1014,14 @@ jobs:
           echo "   - 'latest': Highest SemVer version in PROD"
           echo "   - 'quarantine': Versions that were rolled back"
           echo "   - 'valid': Other valid SemVer versions"
-          echo "   - Non-SemVer versions: No special tags (ignored for 'latest')"
-
-      - name: "📊 Enhanced Build Summary (bookverse-devops pattern)"
+          echo "   - Non-SemVer versions: No special tags (ignored for 'latest')"      - name: "📊 Enhanced Build Summary (bookverse-devops pattern)"
         if: always()
         run: |
           echo "📊 Generating comprehensive CI/CD pipeline summary for stakeholder visibility"
           echo "🎯 This summary provides complete build status, artifacts, and next steps"
           
-          echo "
+          echo "## Build Information" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "
           echo "- **Service:** recommendations" >> $GITHUB_STEP_SUMMARY
           echo "- **Build Name:** $BUILD_NAME" >> $GITHUB_STEP_SUMMARY
           echo "- **Build Number:** $BUILD_NUMBER" >> $GITHUB_STEP_SUMMARY
@@ -1033,7 +1030,7 @@ jobs:
           echo "- **Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          echo "
+          echo "## Job Status" >> $GITHUB_STEP_SUMMARY
           echo "- **Job 1 (analyze-commit):** ✅ Completed" >> $GITHUB_STEP_SUMMARY
           echo "- **Job 2 (build-test-publish):** ✅ Completed" >> $GITHUB_STEP_SUMMARY
           if [[ "${{ needs.analyze-commit.outputs.create_app_version }}" == "true" ]]; then
@@ -1043,7 +1040,7 @@ jobs:
           fi
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          echo "
+          echo "## Artifacts" >> $GITHUB_STEP_SUMMARY
           echo "- **Test Coverage:** ${COVERAGE_PERCENT:-'N/A'}%" >> $GITHUB_STEP_SUMMARY
           echo "- **Docker Images:**" >> $GITHUB_STEP_SUMMARY
           echo "  - 📦 recommendations: \`${IMAGE_NAME:-'N/A'}\`" >> $GITHUB_STEP_SUMMARY
@@ -1055,7 +1052,7 @@ jobs:
           echo "- **Build-Info:** ✅ Published with all artifacts" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          echo "
+          echo "## Integration Status" >> $GITHUB_STEP_SUMMARY
           echo "- **bookverse-core:** ✅ Dependency management & testing" >> $GITHUB_STEP_SUMMARY
           echo "- **bookverse-devops:** ✅ Evidence collection & patterns" >> $GITHUB_STEP_SUMMARY
           echo "- **Consolidated Environment:** ✅ Centralized JFrog setup" >> $GITHUB_STEP_SUMMARY
@@ -1063,13 +1060,14 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           
           if [[ "${{ needs.analyze-commit.outputs.create_app_version }}" == "true" ]]; then
-            echo "
-            echo "Application version **${APP_VERSION:-'N/A'}** has been created and promoted to DEV." >> $GITHUB_STEP_SUMMARY
-            echo "Use the **Promote** workflow to deploy to QA, STAGING, or PROD." >> $GITHUB_STEP_SUMMARY
+            echo "## Next Steps" >> $GITHUB_STEP_SUMMARY
+            echo "Application version **${APP_VERSION:-'N/A'}** has been created and promoted to PROD." >> $GITHUB_STEP_SUMMARY
+            echo "Use the **Promote** workflow to deploy to other environments if needed." >> $GITHUB_STEP_SUMMARY
           else
-            echo "
+            echo "## Next Steps" >> $GITHUB_STEP_SUMMARY
             echo "This commit created build-info artifacts only (no application version)." >> $GITHUB_STEP_SUMMARY
             echo "Use manual workflow dispatch with \`force_app_version=true\` to create an application version." >> $GITHUB_STEP_SUMMARY
           fi
           
           echo "✅ Enhanced summary generated using bookverse-devops patterns"
+
