--- a/.github/workflows/promotion-rollback.yml
+++ b/.github/workflows/promotion-rollback.yml
@@ -153,10 +153,15 @@ jobs:
           echo "🧭 Starting rollback workflow"
           APPTRUST_BASE_URL="/apptrust/api/v1"
 
-          SERVICE_NAME=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f2 | sed 's/^bookverse-//')
-          APP_KEY="bookverse-$SERVICE_NAME"
-          echo "📦 Application: $APP_KEY"
-          echo "APPLICATION_KEY=$APP_KEY" >> $GITHUB_ENV
+          # Fix APP_KEY double prefix issue
+          SERVICE_NAME=$(echo "${GITHUB_REPOSITORY}" | cut -d/ -f2)
+          if [[ "$SERVICE_NAME" =~ ^bookverse-(.+)$ ]]; then
+            APP_KEY="$SERVICE_NAME"  # Already has correct prefix
+            echo "🔧 SERVICE_NAME already has bookverse- prefix: $SERVICE_NAME"
+          else
+            APP_KEY="bookverse-$SERVICE_NAME"  # Add prefix
+          fi
+          echo "📦 Application (FIXED): $APP_KEY"
 
           TARGET_VERSION="${{ inputs.version || '' }}"
           if [ -z "$TARGET_VERSION" ]; then
